<resources>
    <string name="app_name">Kantin</string>

    //disini Register
    <string name="buat_akun"><font color="#00ff00">text</font></string>
    <string name="nim">NIM/NIP</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="telepon">No HP</string>
    <string name="daftar">Daftar</string>
    <string name="kembali">Kembali</string>

    //disini beranda
</resources>
